[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "leb128"
version = "1.0.8"
authors = [
  { name="Mohanson", email="mohanson@outlook.com" },
]
description = "LEB128(Little Endian Base 128)"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/mohanson/leb128"
