[project]
name = "leb128"
version = "1.0.8"
description = "LEB128 (Little Endian Base 128)"
authors = [
    {name = "Mohanson", email = "mohanson@outlook.com"},
]
dependencies = []
requires-python = ">=3.9"
readme = "README.md"
license = { file = "LICENSE" }

[project.urls]
homepage = "https://github.com/mohanson/leb128"

[dependency-groups]
lint = ["ruff>=0.7.4"]
test = ["pytest>=8.3.3"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
